docs: refresh CLAUDE.md and AGENTS.md as current handoffs
CLAUDE.md is now structured as a high-signal handoff: non-negotiables
(uv, Java 21, isolated --gameDir per instance), current truth on the
render path, the display-vs-capture coupling diagnosis, latest
benchmark tables (MacBook 160 vs 320, anvil B=1/8 sweeps at both
resolutions), known-good benchmark settings, and a short
do-not-waste-time list.

AGENTS.md tightens the workflow rules so out-of-band agents follow
the same conventions.

Co-Authored-By: Claude Opus 4 <noreply@anthropic.com>